--- a/Juliana.html
+++ b/Juliana.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name = "author" content = "Juliana">
     <meta name = "description" content = "Creating a website for Poems">
+    <meta name = "viewpoint" content = "width = device - width, initial-scale = 1.0">
     <title>Poems</title>
     <link rel = "icon" href = "Icon.jpeg" type = "image/x-icon">
 </head>
